[tool.poetry]
name = "heady"
version = "0.1.0"
description = ""
authors = ["Leigh Pauls <leigh@nextdoor.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.10b0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
